--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,31 @@
-# History files
+.Rproj.user
 .Rhistory
-.Rapp.history
-
-# Session Data files
 .RData
+.DS_Store
 
-# User-specific files
-.Ruserdata
+_book
+csas-style
+knitr-cache-docx
+knitr-cache-pdf
+knitr-cache-tex
+knitr-figs-docx
+knitr-figs-pdf
+reference-materials
+models*
 
-# Example code in package build process
-*-Ex.R
+resdoc.Rmd
+resdoc.tex
 
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
+*.aux
+*.jpg
+*.html
 *.knit.md
-
-# R Environment Variables
-.Renviron
+*.log
+*.pdf
+*.png
+*.rda
+*.rds
+*.Rproj
+*.sty
+*.upa
+*.utf8.md
