--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,6 +3,7 @@ rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
             "02-chap2.Rmd",
             "03-chap3.Rmd",
-            "04-references.Rmd",
-            "05-appendix.Rmd"]
+            "04-chap4.Rmd",
+            "05-references.Rmd",
+            "06-appendix.Rmd"]
 delete_merged_file: true
