--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -2,6 +2,7 @@ book_filename: "resdoc"
 rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
             "02-chap2.Rmd",
+            "FinnisChapter.Rmd",
             "03-chap3.Rmd",
             "04-references.Rmd",
             "05-appendix.Rmd"]
