--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,6 +3,7 @@ rmd_files: ["index.Rmd",
             "01-chap1.Rmd",
             "02-chap2.Rmd",
             "03-chap3.Rmd",
+            "susan_chapter.Rmd",
             "04-references.Rmd",
             "05-appendix.Rmd"]
 delete_merged_file: true
